--- a/calculator.html
+++ b/calculator.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html><html><head>
 <title>Calculator</title><meta charset="utf-8">
+<h1> Ana Isabel Lara Garcia y Dania Alejandra Soto Garcia </h1>
 <script type="text/javascript">
+
 
 function square() {
   var num = document.getElementById("n1");
